# agentic-sec-config

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
data/: mcp_servers.yaml
data/policy/: access_config.yaml  policy.txt  policy.yaml
data/users/: users.csv
info/: Agentic_Security_Audit_Roadmap.md  Report-Keywords.md  agentic_sec_config_roadmap.md  architecture.md  control_flow.md  grading_scheme.md  project_description.md
info/SDK/: AGENT_SANDBOX_MCP_EXAMPLE.py  MCP_SDK_README.md
infra/scripts/: demo.sh  setup.sh
src/: main.py
src/agents/: db_auditor.py  fixer.py  main_auditor.py  policy_interpreter.py  reporter.py
src/core/: agent_mcp_server.py  error_injection.py  mcp_config.py  mcp_setup.py  mcp_tools.py  policy_io.py  schemas.py  seed.py
src/mcp_servers/config_server/: __main__.py
src/mcp_servers/db_auditor_agent/: db_auditor_mcp_server.py  db_auditor_service.py
src/mcp_servers/db_server/: __main__.py  db_cli.py  db_mcp_server.py  db_service.py
src/mcp_servers/email_server/: __main__.py
src/mcp_servers/fs_server/: __main__.py  fs_cli.py  fs_mcp_server.py  fs_service.py
src/mcp_servers/policy_interpreter_agent/: policy_interpreter_mcp_server.py  policy_interpreter_service.py
tests/: test_stage1.py  test_stage2.py  test_stage3.py
